--- a/Brastlewark/Base.lproj/Main.storyboard
+++ b/Brastlewark/Base.lproj/Main.storyboard
@@ -33,11 +33,11 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="zXU-cR-EC9" kind="show" identifier="showGnomeTable" id="7o3-To-7aH"/>
+                                    <segue destination="dsj-kW-fFc" kind="show" identifier="showGnomeTable" id="Ac2-3I-PVt"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JE2-Fm-09j" userLabel="Try Again Button">
-                                <rect key="frame" x="137" y="100" width="46" height="368"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JE2-Fm-09j" userLabel="Try Again Button">
+                                <rect key="frame" x="110" y="263.5" width="100" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Try Again">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -76,45 +76,72 @@
             </objects>
             <point key="canvasLocation" x="931.875" y="317.95774647887322"/>
         </scene>
-        <!--Gnomes-->
-        <scene sceneID="aFu-Ur-cJ4">
+        <!--Gnome Table View Controller-->
+        <scene sceneID="tvC-M6-FWf">
             <objects>
-                <tableViewController storyboardIdentifier="gnomeTable" title="Gnomes" hidesBottomBarWhenPushed="YES" id="zXU-cR-EC9" customClass="GnomeTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="ukv-1U-KOq">
+                <viewController storyboardIdentifier="gnomeTable" automaticallyAdjustsScrollViewInsets="NO" id="dsj-kW-fFc" customClass="GnomeTableViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="27j-HR-bmC"/>
+                        <viewControllerLayoutGuide type="bottom" id="LCf-Wm-mni"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xGy-9Y-dE3">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q8x-0h-NEA">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="gnomeCell" id="xrR-cb-ykS" customClass="GnomeTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xrR-cb-ykS" id="zTO-05-kVC">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="dsj-kW-fFc" id="WyV-0c-WWG"/>
+                                    <outlet property="delegate" destination="dsj-kW-fFc" id="ErY-3F-KQw"/>
+                                </connections>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="EcB-YB-6WD">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dsj-kW-fFc" id="T0c-WJ-fz7"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="1rS-Dj-sAs">
-                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <textInputTraits key="textInputTraits"/>
-                            <connections>
-                                <outlet property="delegate" destination="zXU-cR-EC9" id="t3k-D0-ZX7"/>
-                            </connections>
-                        </searchBar>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="gnomeCell" id="iIJ-ED-Iid" customClass="GnomeTableViewCell">
-                                <rect key="frame" x="0.0" y="72" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iIJ-ED-Iid" id="uft-ce-uuy">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="zXU-cR-EC9" id="Qlm-O6-MFC"/>
-                            <outlet property="delegate" destination="zXU-cR-EC9" id="hKo-cs-6dk"/>
-                        </connections>
-                    </tableView>
+                        <constraints>
+                            <constraint firstItem="EcB-YB-6WD" firstAttribute="leading" secondItem="xGy-9Y-dE3" secondAttribute="leading" id="Acn-Km-xTS"/>
+                            <constraint firstItem="EcB-YB-6WD" firstAttribute="top" secondItem="xGy-9Y-dE3" secondAttribute="top" constant="20" id="DZd-rx-5dV"/>
+                            <constraint firstAttribute="trailing" secondItem="Q8x-0h-NEA" secondAttribute="trailing" id="Ibf-w9-1oB"/>
+                            <constraint firstItem="Q8x-0h-NEA" firstAttribute="leading" secondItem="xGy-9Y-dE3" secondAttribute="leading" id="OQW-Zm-PaS"/>
+                            <constraint firstAttribute="trailing" secondItem="EcB-YB-6WD" secondAttribute="trailing" id="TfH-KQ-Nwc"/>
+                            <constraint firstItem="LCf-Wm-mni" firstAttribute="top" secondItem="Q8x-0h-NEA" secondAttribute="bottom" id="osx-eR-Mnt"/>
+                            <constraint firstItem="Q8x-0h-NEA" firstAttribute="top" secondItem="EcB-YB-6WD" secondAttribute="bottom" id="tV5-98-PbN"/>
+                        </constraints>
+                    </view>
                     <connections>
-                        <outlet property="searchBar" destination="ukv-1U-KOq" id="RNt-uY-Fne"/>
-                        <segue destination="ID5-5G-ekU" kind="show" identifier="showGnomeDetail" id="8gI-6f-Hbf"/>
+                        <outlet property="searchBar" destination="EcB-YB-6WD" id="bge-JM-Hc3"/>
+                        <outlet property="searchDisplayController" destination="Aec-01-hvm" id="dOA-67-V68"/>
+                        <outlet property="tableView" destination="Q8x-0h-NEA" id="ZX4-9j-kMK"/>
                     </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iHm-Yj-CBS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gsP-GB-5Bw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="Aec-01-hvm">
+                    <connections>
+                        <outlet property="delegate" destination="dsj-kW-fFc" id="Bib-g2-5sG"/>
+                        <outlet property="searchContentsController" destination="dsj-kW-fFc" id="NHD-6e-3zL"/>
+                        <outlet property="searchResultsDataSource" destination="dsj-kW-fFc" id="zvz-uQ-3I2"/>
+                        <outlet property="searchResultsDelegate" destination="dsj-kW-fFc" id="X9n-cJ-NSu"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1778" y="318"/>
+            <point key="canvasLocation" x="1725" y="317.95774647887322"/>
         </scene>
         <!--Details-->
         <scene sceneID="eaE-wb-f5S">
